--- a/style.css
+++ b/style.css
@@ -9,9 +9,7 @@ img{
 }
 .mystyle{
     padding: 20px;
-    border-bottom: 1px solid rgba(116, 114, 114, 0.297);
-   
-    
+    border-bottom: 1px solid rgba(116, 114, 114, 0.297);    
 }
 table{
     border-collapse: collapse;
@@ -19,7 +17,6 @@ table{
     border: 1px solid black;
 }
 .suplly{
-    
      text-align: center;
      width: 200px;
 }
@@ -27,13 +24,11 @@ table{
 padding-left: 30px;
 font-size: 35px;
 color: rgb(12, 211, 222);
-
+cursor: pointer;
 }
-
 .fill{
 color: gold;
 font-size: 35px;
-
 }
 #fav{
     height: auto;
@@ -41,7 +36,6 @@ font-size: 35px;
     border: 1px solid black;
 
 }
-
 table
 {
     border: 2px solid rgb(253, 251, 251);
